# emberstore

./: .gitignore  CMakeLists.txt  LICENSE  README.md  justfile
.github/workflows/: ci.yml
emberstore/: AppDatabase.h  AtomicFile.cpp  AtomicFile.h  Collection.h  Database.h  Document.h  Emberstore.h  FileLock-POSIX.cpp  FileLock-Windows.cpp  FileLock.h  FileWatcher-Windows.cpp  FileWatcher-macOS.mm  FileWatcher.h  Live.h  Query.h
tests/: AppDatabaseTests.cpp  CMakeLists.txt  CollectionPerfTests.cpp  DatabaseContentionTests.cpp  DatabaseTests.cpp  FileLockTests.cpp  FileWatcherTests.cpp  LiveDocumentTests.cpp  LocalDatabaseTests.cpp  SearchDemo.cpp
tests/support/: ContestFile.cpp  ContestFile.h  ContestMain.cpp
